@@ -1,4 +1,4 @@
-DIST juce_1_53.zip 7623534 RMD160 e318a1e143edc9ee4ef31ae61aaada2efa96c8d3 SHA1 19508620cd43df97e22739c16a7382f87b38b6a5 SHA256 fe4588992360437d56c7d2ebec4a6fb7ad2683319bc10250bf802429f95c5698
-EBUILD juce-1.53.ebuild 2951 RMD160 d9b8ba9d1601d108d4edf1719bacd806b0b228a9 SHA1 90950fe2e4d71c91fafc22fc52f0dae169940090 SHA256 b94314f6376d7853a352def4d0fa66d14d89792543e1f7685cd73e1c4e40017f
-MISC ChangeLog 825 RMD160 151030db80ec0f3a29809b6371db03e8ac074bd2 SHA1 cd6ecbd51e1a57ad3954d675d3e08bffb08e5a8c SHA256 c555007e6abfde820d71ee121c554736efe09267a02c1276c773fbd05d28f9e8
-MISC metadata.xml 364 RMD160 f0a9fb77d89d2e38fde0f16ab05c37e151b54e72 SHA1 ac282559d7e1890eddd0405ad56cfea12da2ebf4 SHA256 c1ed97527d6d1cf7e0af8f1a5b3e25209bbe30278583db2d99c3d50af7f50e32
+DIST JUCE-1_53_release.tar.gz 6519860 SHA256 abe83241d93a4cd29315137ec60dd60c5879f8dd7a5c86a4c6e400d2a04d05a0 SHA512 fec465bda335075948fef6dcdfd41e2dcbce2160c60b74f1eaa5958a31c0195d21d720a262f5f7b38a0ca0af4816573775a357d21f16fe3768b3140f25172020 WHIRLPOOL 4f8b410b057bb43220e95d037b7dca52201015317368b1a7abefa703ac822c2a1760168bd9bc2fa14d26ab5680cb8d1075547187d21b6d1c8e80420a83f07078
+EBUILD juce-1.53.ebuild 2912 SHA256 bf6f90d297df5f63181327c97629d6092a5d532267b0dae2a19b65882822289e SHA512 d353b5226bd694480f19cd15963b86b129a3d1cc444c9c581a97582bc598f5f617ba9bad20e3c046d3e7835d6c2dc2289397687269d3564d18a1542addb36de3 WHIRLPOOL cab9a3c71e001b3cf9473ffd3f865b867adb681219c9686ea4d9f5878c0ef155827708a5774a311f6ae2d3af8197bf4f242030db48f8bb81ff8816cc8207748e
+MISC ChangeLog 986 SHA256 1ffb5f57f4f0f2f0d0c84e089da437936eafa9aaf6b1fca548807ae46678f62b SHA512 d0cdcaa31e11b0b70632e39196040a2a3649ed8eb1b971c9e8fe0721b9385687733ede354736643588fd21a5493c7687a922fa59bf90242854722013b59aae13 WHIRLPOOL f3600d7f7bc1b056c5dd101085601a433afdcf6919e57bf151a3c1f9122b1e4033c0a37b19359e728ad5bae4fffeee8a567541d8b82d45641340b57498951343
+MISC metadata.xml 364 SHA256 c1ed97527d6d1cf7e0af8f1a5b3e25209bbe30278583db2d99c3d50af7f50e32 SHA512 b86c0f88675e254fb1714645993f18b27e3a0c2bddb55285a693359de385d34f8383de835bcfab6018840aea520c3edfc0369a3dcb4a07e174a986348a2f8f85 WHIRLPOOL cc358a6bec4b1369096cb044dec0fcd01f54aefca711fba3f65fc6528d8b9ff24d17c66f2bda0f50b39771c1f065b1bb27c36d1bce089d26c35f6668ab113915
